[tool.poetry]
name = "design_patterns"
version = "0.1.0"
description = ""
authors = ["navkant <navkant.tyagi9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^1.0.0"
pre-commit = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
